@@ -3798,15 +3798,21 @@ function getAlertBar($guid, $connection2, $gibbonPersonID, $privacy = '', $divEx
         } catch (PDOException $e) {
             $_SESSION[$guid]['sidebarExtra'] .= "<div class='error'>".$e->getMessage().'</div>';
         }
-        if ($resultAlert->rowCount() > 1 and $resultAlert->rowCount() <= 4) {
-            $gibbonAlertLevelID = 003;
-            $alertThresholdText = __($guid, 'This alert level occurs when there are between 2 and 4 events recorded for a student.');
-        } elseif ($resultAlert->rowCount() > 4 and $resultAlert->rowCount() <= 8) {
-            $gibbonAlertLevelID = 002;
-            $alertThresholdText = __($guid, 'This alert level occurs when there are between 5 and 8 events recorded for a student.');
-        } elseif ($resultAlert->rowCount() > 8) {
+
+        $academicAlertLowThreshold = getSettingByScope($connection2, 'Students', 'academicAlertLowThreshold');
+        $academicAlertMediumThreshold = getSettingByScope($connection2, 'Students', 'academicAlertMediumThreshold');
+        $academicAlertHighThreshold = getSettingByScope($connection2, 'Students', 'academicAlertHighThreshold');
+
+        if ($resultAlert->rowCount() > $academicAlertHighThreshold) {
             $gibbonAlertLevelID = 001;
-            $alertThresholdText = __($guid, 'This alert level occurs when there are more than 8 events recorded for a student.');
+            $alertThresholdText = sprintf(__($guid, 'This alert level occurs when there are more than %1$s events recorded for a student.'), $academicAlertHighThreshold);
+        } elseif ($resultAlert->rowCount() > $academicAlertMediumThreshold) {
+            $gibbonAlertLevelID = 002;
+            $alertThresholdText = sprintf(__($guid, 'This alert level occurs when there are between %1$s and %2$s events recorded for a student.'), $academicAlertMediumThreshold, ($academicAlertHighThreshold-1));
+        } elseif ($resultAlert->rowCount() > $academicAlertLowThreshold) {
+            $gibbonAlertLevelID = 003;
+            $alertThresholdText = sprintf(__($guid, 'This alert level occurs when there are between %1$s and %2$s events recorded for a student.'), $academicAlertLowThreshold, ($academicAlertMediumThreshold-1));
+
         }
         if ($gibbonAlertLevelID != '') {
             $alert = getAlert($guid, $connection2, $gibbonAlertLevelID);
